Cut original lib

--- a/lib/summernote/summernote.html
+++ b/lib/summernote/summernote.html
@@ -16,12 +16,10 @@
         placeholder: "&nbsp;",
         tabsize: 2,
         toolbar: [
-          ['style', ['style']],
-          ['font', ['bold', 'underline', 'italic']],
+          ['font', ['bold', 'italic', 'underline']],
           ['color', ['color']],
-          ['para', ['ul', 'ol', 'paragraph']],
-          ['insert', ['link', 'picture', 'hr', 'video']],
-          ['view', ['codeview']]
+          ['para', ['ul', 'ol']],
+          ['insert', ['link']],
         ],
         disableGrammar: false,
         spellCheck: false
@@ -32,7 +30,7 @@
           display: block;
           margin: 0px;
       }
-      .note-editor.note-airframe, .note-editor.note-frame {
+<!--      .note-editor.note-airframe, .note-editor.note-frame {
           border: 0px solid #a9a9a9;
       }
       .note-editor .note-editing-area {
@@ -43,12 +41,12 @@
           border-radius: 0px;
       }
       .note-editable {
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 20px;
-        padding-left: 10px;
+        padding-top: 0px;
+        padding-right: 0px;
+        padding-bottom: 0px;
+        padding-left: 0px;
 
-      }
+      }-->
 
     </style>
 </body>
